# enum_helpers

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: as_enum.rs  as_mut_enum.rs  impl_as.rs  impl_into.rs  impl_is.rs  is_enum.rs  lib.rs
tests/: as.rs  generic.rs  generic_is.rs  into.rs  struct.rs  tests.rs
